# IMFTool

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  info.json
.github/workflows/: main.yml
ADM_S-ADM_SampleTrackFiles/20240515_SMPTE_ST2067-203_and_ST2067-204_TestContent_Fraunhofer/: LICENSE.txt  ST2067-203_audio_track_file_2.mxf  ST2067-204_audio_track_file_2.mxf
asdcplib-2.5.14-patches/: AS_02.h  AS_02_TimedText.cpp  CMakeLists.txt  KM_fileio.cpp  KM_fileio.h  MDD.cpp  MDD.h  Metadata.cpp  Metadata.h  README  ST2052_TextParser.cpp  as-02-unwrap.cpp  as-02-wrap.cpp  dirent_win.h
asdcplib-2.6.17-patches/: AS_02_TimedText.cpp  README
asdcplib-2.7.19-patches/: AS_02_TimedText.cpp  CMakeLists.txt  README  README.md
asdcplib-2.7.19-patches/src/: AS_02_JP2K.cpp  AS_02_internal.h  CMakeLists.txt  Metadata.cpp  h__02_Writer.cpp
delivery-specifications/: DRAFT_Netflix_OriginalsSpec_3.0_UHD_4K_SDR.xml  IMF_DeliverySchema_Marker_Subtitle.xml  TSP2121-1_basic
dist-binaries/: README.binaries  README.md
files/: TTML_Empty_Minimal.xml
hostProfiles/: windowsMinGW.profile
regxmllib/: LICENSE.txt  www-smpte-ra-org-reg-2003-2012.xml  www-smpte-ra-org-reg-335-2012-13-1-aaf.xml  www-smpte-ra-org-reg-335-2012-14-9.xml  www-smpte-ra-org-reg-335-2012-phdr.xml  www-smpte-ra-org-reg-335-2012.xml  www-smpte-ra-org-reg-395-2014-13-1-aaf-phdr.xml  www-smpte-ra-org-reg-395-2014-13-1-aaf.xml  www-smpte-ra-org-reg-395-2014-14-9.xml
resources/: IMFTool.icns  qt_resources.qrc  resource.h  stylesheet.qss  win_resources.aps  win_resources.rc
src/: ACES_Decoder.cpp  ACES_Decoder.h  ACES_Player.cpp  ACES_Player.h  ACES_Preview.cpp  ACES_Preview.h  As02AcesIStream.cpp  As02AcesIStream.h  CMakeLists.txt  CompositionPlaylistCommands.cpp  CompositionPlaylistCommands.h  CustomProxyStyle.cpp  CustomProxyStyle.h  DelegateComboBox.cpp  DelegateComboBox.h  DelegateMetadata.cpp  DelegateMetadata.h  Doxyfile.in  EmptyTimedTextGenerator.cpp  EmptyTimedTextGenerator.h  Error.cpp  Error.h  Events.cpp  Events.h  GraphicScenes.cpp  GraphicScenes.h  GraphicsCommon.cpp  GraphicsCommon.h  GraphicsViewScaleable.cpp  GraphicsViewScaleable.h  GraphicsWidgetComposition.cpp  GraphicsWidgetComposition.h  GraphicsWidgetResources.cpp  GraphicsWidgetResources.h  GraphicsWidgetSegment.cpp  GraphicsWidgetSegment.h  GraphicsWidgetSequence.cpp  GraphicsWidgetSequence.h  GraphicsWidgetTimeline.cpp  GraphicsWidgetTimeline.h  (+106 more)
src/synthesis/: IMF_DeliverySchema.cpp  IMF_DeliverySchema.h  LabelsRegister.cpp  LabelsRegister.h  SMPTE-2067-100a-2014-OPL.cpp  SMPTE-2067-100a-2014-OPL.h  SMPTE-2067-2-2013-Core.cpp  SMPTE-2067-2-2013-Core.h  SMPTE-2067-3-2013-CPL.cpp  SMPTE-2067-3-2013-CPL.h  SMPTE-2067-9a-2018-Sidecar.cpp  SMPTE-2067-9a-2018-Sidecar.h  SMPTE-429-8-2006-PKL.cpp  SMPTE-429-8-2006-PKL.h  SMPTE-429-8-2014-AM.cpp  SMPTE-429-8-2014-AM.h  SMPTE-429-9-2007-AM.cpp  SMPTE-429-9-2007-AM.h  dcmlTypes.cpp  dcmlTypes.h  st0433-dcmlTypes.cpp  st0433-dcmlTypes.h  st2067-203a-20XX.cpp  st2067-203a-20XX.h  st2067-204a-20XX.cpp  st2067-204a-20XX.h  st2067-2a-2016-Core.cpp  st2067-2a-2016-Core.h  st2067-2a-2020-Core.cpp  st2067-2a-2020-Core.h  st2067-2b-2016-PKL.cpp  st2067-2b-2016-PKL.h  st2067-2b-2020-PKL.cpp  st2067-2b-2020-PKL.h  st2067-3a-2016-CPL.cpp  st2067-3a-2016-CPL.h  st2067-3a-2020-CPL.cpp  st2067-3a-2020-CPL.h  xml.cpp  xml.h  (+2 more)
src/synthesis/xsd/cxx/parser/xerces/: elements.txx
src/synthesis/xsd/cxx/tree/: serialization.txx  types.txx
src/synthesis/xsd/cxx/xml/dom/: serialization-header.txx
src/windows/: QtIFControlScript.qs
xsd/: IMF_DeliverySchema.xsd  LabelsRegister.xsd  README  SMPTE-2067-100a-2014-OPL.xsd  SMPTE-2067-2-2013-Core.xsd  SMPTE-2067-3-2013-CPL.xsd  SMPTE-2067-9a-2018-Sidecar.xsd  SMPTE-429-8-2006-PKL.xsd  SMPTE-429-8-2014-AM.xsd  SMPTE-429-9-2007-AM.xsd  dcmlTypes.xsd  imf.options  lr.options  st0433-dcmlTypes.xsd  st2067-203a-20XX.xsd  st2067-204a-20XX.xsd  st2067-2a-2016-Core.xsd  st2067-2a-2020-Core.xsd  st2067-2b-2016-PKL.xsd  st2067-2b-2020-PKL.xsd  st2067-3a-2016-CPL.xsd  st2067-3a-2020-CPL.xsd  xmldsig-core-schema.xsd
xsd-sidecar/: SMPTE-2067-9a-2018-Sidecar.xsd  SMPTE-2067-9a-2018-Sidecar.xsd.org  dcmlTypes.xsd  imf.options
